--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 ---
 repository:
   name: homeshick-linux
-  description: Dotfile management for Linux
+  description: "Dotfiles: Linux"
   topics: dotfiles, homeshick
 
   private: false
