--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -12,8 +12,8 @@ repository:
 
   default_branch: master
 
-  allow_squash_merge: true
-  allow_merge_commit: true
+  allow_squash_merge: false
+  allow_merge_commit: false
   allow_rebase_merge: true
 
 labels:
@@ -47,5 +47,20 @@ labels:
   - name: hacktoberfest-accepted
     color: cccccc
     description: Accepted as a Hacktoberfest submission
+
+branches:
+  - name: master
+    protection:
+      required_pull_request_reviews: null
+      required_status_checks:
+        strict: true
+        contexts:
+          - check
+      enforce_admins: false
+      restrictions:
+        apps:
+          - renovate
+        users: []
+        teams: []
 
 ...
