ci: improve workflows and release process

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,18 +1,29 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
-        "config:recommended",
+        "config:best-practices",
+        ":disableRateLimiting",
+        ":prImmediately",
         ":semanticCommits",
         ":semanticCommitType(deps)"
     ],
+    "dockerfile": {
+        "pinDigests": true
+    },
+    "gomod": {
+        "postUpdateOptions": [
+            "gomodUpdateImportPaths",
+            "gomodTidy"
+        ]
+    },
     "packageRules": [
         {
             "description": "Semantic commits for major updates",
             "matchUpdateTypes": [
                 "major"
             ],
-            "semanticCommitType": "major",
-            "semanticCommitScope": "deps",
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "major",
             "automerge": true
         },
         {
@@ -20,8 +31,8 @@
             "matchUpdateTypes": [
                 "minor"
             ],
-            "semanticCommitType": "minor",
-            "semanticCommitScope": "deps",
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "minor",
             "automerge": true
         },
         {
@@ -29,12 +40,29 @@
             "matchUpdateTypes": [
                 "patch"
             ],
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "patch",
+            "automerge": true
+        },
+        {
+            "description": "Automerge docker digest updates",
+            "groupName": "docker digests",
+            "matchDatasources": [
+                "docker"
+            ],
+            "matchUpdateTypes": [
+                "pin",
+                "pinDigest",
+                "digest"
+            ],
             "semanticCommitType": "patch",
             "semanticCommitScope": "deps",
+            "pinDigests": true,
             "automerge": true
         },
         {
             "description": "Build tool version upgrades",
+            "groupName": "build tools",
             "matchManagers": [
                 "github-actions"
             ],
