--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,77 +1,78 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "config:best-practices",
-        ":disableRateLimiting",
-        ":prImmediately",
-        ":semanticCommits",
-        ":semanticCommitType(deps)"
-    ],
-    "dockerfile": {
-        "pinDigests": true
-    },
-    "gomod": {
-        "postUpdateOptions": [
-            "gomodUpdateImportPaths",
-            "gomodTidy"
-        ]
-    },
-    "packageRules": [
-        {
-            "description": "Semantic commits for major updates",
-            "matchUpdateTypes": [
-                "major"
-            ],
-            "semanticCommitType": "deps",
-            "semanticCommitScope": "major",
-            "automerge": true
-        },
-        {
-            "description": "Semantic commits for minor updates",
-            "matchUpdateTypes": [
-                "minor"
-            ],
-            "semanticCommitType": "deps",
-            "semanticCommitScope": "minor",
-            "automerge": true
-        },
-        {
-            "description": "Semantic commits for patch updates",
-            "matchUpdateTypes": [
-                "patch"
-            ],
-            "semanticCommitType": "deps",
-            "semanticCommitScope": "patch",
-            "automerge": true
-        },
-        {
-            "description": "Automerge docker digest updates",
-            "groupName": "docker digests",
-            "matchDatasources": [
-                "docker"
-            ],
-            "matchUpdateTypes": [
-                "pin",
-                "pinDigest",
-                "digest"
-            ],
-            "semanticCommitType": "patch",
-            "semanticCommitScope": "deps",
-            "pinDigests": true,
-            "automerge": true
-        },
-        {
-            "description": "Build tool version upgrades",
-            "groupName": "build tools",
-            "matchManagers": [
-                "github-actions"
-            ],
-            "semanticCommitType": "ci",
-            "semanticCommitScope": "tools",
-            "automerge": true
-        }
-    ],
-    "labels": [
-        "renovate"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:best-practices",
+    ":disableRateLimiting",
+    ":prImmediately",
+    ":semanticCommits",
+    ":semanticCommitType(deps)"
+  ],
+  "dockerfile": {
+    "pinDigests": true
+  },
+  "gomod": {
+    "postUpdateOptions": [
+      "gomodUpdateImportPaths",
+      "gomodTidy"
     ]
+  },
+  "packageRules": [
+    {
+      "description": "Semantic commits for major updates",
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "semanticCommitType": "deps",
+      "semanticCommitScope": "major",
+      "automerge": true
+    },
+    {
+      "description": "Semantic commits for minor updates",
+      "matchUpdateTypes": [
+        "minor"
+      ],
+      "semanticCommitType": "deps",
+      "semanticCommitScope": "minor",
+      "automerge": true
+    },
+    {
+      "description": "Semantic commits for patch updates",
+      "matchUpdateTypes": [
+        "patch"
+      ],
+      "semanticCommitType": "deps",
+      "semanticCommitScope": "patch",
+      "automerge": true
+    },
+    {
+      "description": "Automerge docker digest updates",
+      "groupName": "docker digests",
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchUpdateTypes": [
+        "pin",
+        "pinDigest",
+        "digest"
+      ],
+      "semanticCommitType": "patch",
+      "semanticCommitScope": "deps",
+      "pinDigests": true,
+      "automerge": true
+    },
+    {
+      "description": "Build tool version upgrades",
+      "groupName": "build tools",
+      "matchManagers": [
+        "github-actions"
+      ],
+      "semanticCommitType": "ci",
+      "semanticCommitScope": "tools",
+      "automerge": true,
+      "pinDigests": true
+    }
+  ],
+  "labels": [
+    "renovate"
+  ]
 }
