ci: really stop pin digests for github actions

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -69,7 +69,7 @@
       "semanticCommitType": "ci",
       "semanticCommitScope": "tools",
       "automerge": true,
-      "pinDigests": true
+      "pinDigests": false
     }
   ],
   "labels": [
